--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/node_modules
+/public/hot
 /vendor
 .env
 .env.backup
@@ -7,3 +9,5 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+/.idea
+/.vscode
