--- a/.env.example
+++ b/.env.example
@@ -53,5 +53,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FAKER_LOCALE=id_ID
 APP_TIMEZONE=Asia/Jakarta
+APP_LOCALE=id
 
 FILESYSTEM_DRIVER=public
